<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flightInfos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/flightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        tools:text="@string/flight_number" />

    <TextView
        android:id="@+id/flightNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/flight_no_string" />

    <TextView
        android:id="@+id/departureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        tools:text="@string/departure_icao" />

    <TextView
        android:id="@+id/departureString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/departure_icao_string" />

    <TextView
        android:id="@+id/airlineIcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        tools:text="@string/airline_icao" />

    <TextView
        android:id="@+id/airlineIcaoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        tools:text="@string/airline_icao_string" />

    <TextView
        android:id="@+id/arrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="20dp"
        tools:text="@string/arrival_icao" />

    <TextView
        android:id="@+id/arrivalTimeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        tools:text="@string/arrival_icao_string" />

    <TextView
        android:id="@+id/airframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="335dp"
        tools:text="@string/airplane_icao" />

    <TextView
        android:id="@+id/airframeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        tools:text="@string/airplane_icao_string" />

    <TextView
        android:id="@+id/altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="20dp"
        tools:text="@string/altitude" />

    <TextView
        android:id="@+id/altitudeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="20dp"
        tools:text="@string/altitude_string" />


</FrameLayout>